[package]
name = "sandfall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.68"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[[bin]]
name = "sandfall"
path = "src/main.rs"
