[package]
name = "sandfall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile-dev]
debug = true

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.4"
features = ["Document", "Element", "HtmlElement", "Node", "Window"]

[dependencies]
wasm-bindgen = "0.2.91"

[[bin]]
name = "sandfall"
path = "src/main.rs"
